--- a/calculator.css
+++ b/calculator.css
@@ -26,6 +26,7 @@ body{
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    margin: 5px 5px;
 }
 .button{
     margin: 5px 5px;
