--- a/calculator.css
+++ b/calculator.css
@@ -26,6 +26,8 @@ body{
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    height: 30px;
+    width: 30px;
     margin: 5px 5px;
 }
 .button{
@@ -33,9 +35,4 @@ body{
     border-style: solid;
     border-width: 1px;
     border-radius: 20%;
-}
-
-div > input{
-    margin-bottom: 10px;
-    height: 30px;
 }
