--- a/calculator.css
+++ b/calculator.css
@@ -32,9 +32,8 @@ body{
     border-style: solid;
     border-width: 1px;
     border-radius: 20%;
+    height: 5px;
+    width: 5px;
 }
 
-.button > p{
-    padding: 5px;
-}
 
