--- a/calculator.css
+++ b/calculator.css
@@ -20,20 +20,30 @@ body{
     justify-content: center;
     align-items: center;
 }
+
+#display{
+    height: 30px;
+}
+
 #buttons{
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    margin-top: 20px;
 }
+
 .button{
-    margin: 5px 5px;
+    margin: 7px 7px;
     border-style: solid;
     border-width: 1px;
     border-radius: 20%;
-    height: 5px;
-    width: 5px;
+    height: 35px;
+    width: 35px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
